增加全景功能

--- a/src/www/views/common-head.ejs
+++ b/src/www/views/common-head.ejs
@@ -28,3 +28,4 @@
 <script src="/public/jquery/jquery.js"></script>
 <script src="/public/vue/vue.js"></script>
 <script src="/public/bootstrap/js/bootstrap.min.js"></script>
+<script src="/public/js/common.js"></script>
