--- a/src/www/views/task/realtime-queue-view.ejs
+++ b/src/www/views/task/realtime-queue-view.ejs
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>查看后台实时任务</title>
-
+  <script src="/public/react/react.js"></script>
+  <script src="/public/react/react-dom.js"></script>
 </head>
 <body>
 <div id="app"></div>
